hphp/hack/test/typecheck/inout/bad_inout_hint_return3.php.exp
File "bad_inout_hint_return3.php", line 4, characters 10-28:
Invalid return type (Typing[4184])
File "bad_inout_hint_return3.php", line 3, characters 33-35:
This is an inout parameter
File "bad_inout_hint_return3.php", line 4, characters 15-16:
It is incompatible with a normal parameter
