hphp/hack/test/typecheck/inout/bad_inout_hint_return3.php
<?hh // strict

function foo(): (function(inout int, string): int) {
  return (int $x, $y) ==> 42;
}
